--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0",
 		"react-native": "0.50.2",
+		"react-native-router-flux": "^4.0.0-beta.23",
 		"react-native-windows": "^0.50.0-rc.1",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
